@@ -6,12 +6,11 @@ import fontys.crossyn.model.Packet;
 import fontys.crossyn.service.PacketService;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("/api/packet")
@@ -30,6 +29,7 @@ public class PacketController {
 
     @GetMapping
     public List<PacketDTO> getAllPackets(){
-        return packetService.list().stream().map(packet -> modelMapper.map(packet, PacketDTO.class)).toList();
+
+        return packetService.list().stream().map(packet -> modelMapper.map(packet, PacketDTO.class)).collect(Collectors.toList());
     }
 }
